
      Barbara Bitarello). bab might be faster thanks to an improved lower bound.

    o densiTree now calls axisPhylo, which was improved in ape, to avoid code

      duplication

    o more error checking of input arguments and associated tests

BUG FIXES

    o update.pml can now can properly update site.rate

    o fix degree of freedom for free rate models


    CHANGES in PHANGORN VERSION 2.12.0

NEW FEATURES

    o new function supgma, performing serial sampled UPGMA

      (Drummond, Rodrigo 2000)

    o new function gap_as_state, treating gaps as a state.

    o new function keep_as_tip allows to prune a tree and keep nodes as a tip

      (suggested by Hedvig Skirgard)

    o nnls now can estimate trees with calibrations and tip dated trees

    o the functions Descendants, Ancestors, Siblings, mrca.phy now also accept a

      character vector for the node argument and not only integers.

    o Ancestral state reconstruction was rewritten.

      The output of ancestral.pars and ancestral.pars could return different

      objects. anc_pml and anc_pars are now prefered over ancestral.pml and

      ancestral.pars. Output is now an object of class ancestral, which contains

      tree with node labels, the original alignment and reconstructions.

      The should be considered experimental as the internals of this function

      might change in future.

      Ancestral states of constant sites are now always this state.

    o Joint reconstruction for ML is now available.

    o Improvements to several plot functions to get nicer plots out of the box.

      Nicer defaults for plot.pml, mainly for rooted trees.

    o plotAnc got an argument scheme allowing to use different color schemes,

      especially for amino acid models shared with image.AAbin and assumes an

      ancestral object.

    o plot.networx gets two additional arguments, direction as in plot.phylo and

      angle to rotate the network.
