@@ -137,6 +137,7 @@ export(assert_pml)
 export(assert_treeish)
 export(bab)
 export(baseFreq)
+export(base_freq)
 export(binomial_mk)
 export(bootstrap.phyDat)
 export(bootstrap.pml)
