@@ -119,5 +119,5 @@ coalSpeciesTree <- function(tree, X = NULL, sTree = NULL) {
   sTree
 }
 
-#' @srrstats {G1.0} in the lines folloing: 68
+#' @srrstats {G1.0} in the lines following: 68
 NULL
