@@ -68,7 +68,7 @@ aic.weights <- function(aic) {
 #'
 #' \dontrun{
 #' data(Laurasiatherian)
-#' mT <- modelTest(Laurasiatherian, tree, model = c("JC", "K80", "HKY", "GTR"),
+#' mT <- modelTest(Laurasiatherian, model = c("JC", "K80", "HKY", "GTR"),
 #'                 R=TRUE)
 #'
 #' # Some exploratory data analysis
