@@ -74,6 +74,7 @@ print.pml <- function(x, ...) {
   nc <- attr(x$data, "nc")
   ll0 <- sum(w * log(w / sum(w)))
   cat("unconstrained loglikelihood:", ll0, "\n")
+  cat("Total tree length:", sum(x$tree$edge.length), "\n")
   if (x$inv > 0) cat("Proportion of invariant sites:", x$inv, "\n")
   if (x$k > 1) {
     cat("Model of rate heterogeneity: ")
