@@ -57,7 +57,7 @@ Garg(2025).
 
 \dontrun{
 data(Laurasiatherian)
-mT <- modelTest(Laurasiatherian, tree, model = c("JC", "K80", "HKY", "GTR"),
+mT <- modelTest(Laurasiatherian, model = c("JC", "K80", "HKY", "GTR"),
                 R=TRUE)
 
 # Some exploratory data analysis
